plugins {
	id 'java'
	id 'application'
	id 'eclipse'
	id 'idea'
	id 'edu.sc.seis.launch4j' version '2.5.3'
	id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
	mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

version = '2.5.1' // TS5AddonInstaller.VERSION
mainClassName = 'com.github.felixvolo.ts5ai.TS5AddonInstaller'

dependencies {
    shadow "com.fasterxml.jackson.core:jackson-databind:2.14.+"
	shadow "commons-cli:commons-cli:1.6.0"
	shadow "org.dom4j:dom4j:2.1.4"
	shadow "com.vdurmont:semver4j:3.1.0"
}

jar {
	manifest {
		attributes 'Main-Class': mainClassName
	}
	
	from {
		configurations.runtimeClasspath.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	}
	
	from 'LICENSE'
	
	duplicatesStrategy = 'include'
}

launch4j {
	mainClassName = mainClassName
	jarTask = project.tasks.shadowJar
	manifest = "$projectDir/${name}.manifest"
	copyright = 'MIT License'
	companyName = 'FelixVolo'
	fileDescription = project.name
	productName = project.name
	internalName = project.name
	version = project.version
	textVersion = project.version
}

shadowJar {
	configurations = [project.configurations.compileClasspath]
	from sourceSets.main.output
	from 'LICENSE'
	duplicatesStrategy = 'exclude'
	exclude('META-INF/**')
}
